# opencv-handwrite-recognize

./: .gitignore  CMakeLists.txt  HOG_SVM_DATA.xml  README.md  common.h  label_character_map.txt  main.cpp  resMat.txt  train.cpp  train.h
Debug/: opencv-handwrite-recognize
image-reader/: reader.cpp  reader.h
mouse-draw/: mousedraw.cpp  mousedraw.h
t10k-images/: createpath.py  result.txt
tools/: result.txt
train/: label_character_map.txt  train-config-temp1.txt  train-config.txt  train.cpp  train.h
train-images/: result.txt
train/train-images/: createpath.py  result.txt
train/train-text/:                 	                                             !  "  #  $  %  &  '  (  )  *  (+64 more)
